platforms/infrastructure/k8s-legacy/production/tracing-middleware-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/deployment/machine-native-ops
    eco-base/urn: urn:eco-base:k8s:core:deployment:machine-native-ops:sha256-b9c4e8818e722fce6ccdf0f99c0412611a8d755b76129a16390ebcc0c0b980f9
    sidecar.istio.io/interceptionMode: TPROXY
    sidecar.istio.io/proxyConfig: "proxyStatsMatcher:\n  inclusionRegexps:\n  - \"\
      .*_outbound.*\"\n  - \".*_inbound.*\"\n"
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: machine-native-ops
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/owner: eco-system
    eco-base/platform: core
  name: machine-native-ops
  namespace: production
spec:
  annotations:
    instrumentation.opentelemetry.io/inject-java: 'true'
    instrumentation.opentelemetry.io/inject-python: 'true'
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: '15020'
    prometheus.io/scrape: 'true'
  template:
    metadata: null
